--- a/_sass/layout/_early_intervention.scss
+++ b/_sass/layout/_early_intervention.scss
@@ -36,4 +36,7 @@
       margin-right: 5rem;
     }
   }
+  .intervention-image{
+   margin-top: -4rem;
+  }
 }
